[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "molprobe"  # Replace with your package name
version = "0.1.0"
description = "A Python package for analysing molecular trajectories"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Romain Simon", email = "romainljsimon@gmail.com"},
]
requires-python = ">=3.6"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy",
    "atooms",
    "scipy",
    "atooms-pp==3.3.3"
]

[project.urls]
Homepage = "https://github.com/romainljsimon/molprobe.com"
